--- a/db/alembic.ini
+++ b/db/alembic.ini
@@ -6,6 +6,7 @@ script_location = migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
+file_template = %%(year)d%%(month).2d%%(day).2d-%%(hour).2d%%(minute).2d_%%(slug)s
 
 # timezone to use when rendering the date
 # within the migration file as well as the filename.
@@ -35,7 +36,8 @@ script_location = migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = driver://user:pass@localhost/dbname
+# ↓のURLはコメントアウトし、DB情報はdb/migrations/env.pyに記載する
+; sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
