--- a/docker/db/conf.d/my.cnf
+++ b/docker/db/conf.d/my.cnf
@@ -5,6 +5,7 @@ default-storage-engine=INNODB
 explicit-defaults-for-timestamp=1
 general-log=1
 general-log-file=/var/log/mysql/mysqld.log
+datadir=/var/lib/mysql
 
 [mysqldump]
 default-character-set=utf8
